--- a/.github/workflows/download_translations.yml
+++ b/.github/workflows/download_translations.yml
@@ -30,7 +30,7 @@ jobs:
           localization_branch_name: 'translations'
           create_pull_request: true
           pull_request_title: 'chore: Update translations'
-          token: ${{secrets.WEB_CROWDIN_TOKEN}}
+          token: ${{secrets.WEBTEAM_CROWDIN_TOKEN}}
           source: '/src/i18n/en-US.json'
           translation: '/src/i18n/%locale%.json'
           base_path: '.'
