chore: Create GH release directly

--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -152,7 +152,7 @@ jobs:
             yarn docker "$DISTRIBUTION" production
           fi
 
-      - name: Create GitHub release draft
+      - name: Create GitHub release
         id: create_release
         if: env.TAG != '' && env.DISTRIBUTION == 'wire'
         uses: actions/create-release@v1
@@ -162,5 +162,5 @@ jobs:
           tag_name: ${{env.TAG}}
           release_name: ${{env.TAG}}
           body_path: ./CHANGELOG.md
-          draft: true
+          draft: false
           prerelease: false
