--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -98,6 +98,27 @@ jobs:
         if: env.TAG != ''
         run: yarn bundle:prod
 
+      - name: Assembling release information
+        if: env.TAG != '' && env.DISTRIBUTION == 'wire'
+        # NOTE: always using 'main' config, since release version is only consumed at
+        #       'production' stage for now
+        # NOTE: 'containerImageTag' value must follow bin/push_docker.js:L49
+        shell: bash
+        env:
+          RELEASE_NAME: ${{env.TAG}}
+        run: |
+          configVersion=$(cat ./app-config/package.json | jq -r '.dependencies["wire-web-config-default-main"]' | awk -F '#' '{ print $2 }')
+          packageVersion=$(cat ./package.json | jq -r '.version')
+          containerImageTag="${packageVersion}-${configVersion}-${GITHUB_SHA::7}"
+          echo "{\"imageTag\": \"${containerImageTag}\", \"releaseName\": \"${RELEASE_NAME}\"}" > ./release-info.json
+
+      - name: Storing release information
+        if: env.TAG != '' && env.DISTRIBUTION == 'wire'
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-info.json
+          path: ./release-info.json
+
       - name: Deploy staging build to Elastic Beanstalk
         if: env.BRANCH_NAME == 'staging' && env.DISTRIBUTION == 'wire'
         uses: einaregilsson/beanstalk-deploy@v11
@@ -164,3 +185,70 @@ jobs:
           body_path: ./CHANGELOG.md
           draft: false
           prerelease: false
+
+
+  update_helm_chart:
+    name: Update Helm chart
+    runs-on: ubuntu-latest
+
+    needs: test_build_deploy
+
+    steps:
+      - name: Obtaining release information artifact
+        id: release-info-artifact
+        uses: actions/download-artifact@v2
+        continue-on-error: true
+        with:
+          name: release-info.json
+      - name: Indicating whether release info exist
+        id: release-info-file
+        env:
+          ARTIFACT_LOCAL_PATH: '${{ steps.release-info-artifact.outputs.download-path }}/release-info.json'
+        shell: bash
+        run: |
+          test -s "${ARTIFACT_LOCAL_PATH}" && echo '::set-output name=exists::true'
+          echo "::set-output name=releaseInfo::$(cat ${ARTIFACT_LOCAL_PATH})"
+
+      - name: Checking out 'wire-server'
+        uses: actions/checkout@v2
+        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
+        with:
+          repository: 'wireapp/wire-server'
+          fetch-depth: 1
+
+      - name: Changing Helm value of the account-pages chart
+        id: change-helm-value
+        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
+        shell: bash
+        run: |
+          sed --in-place --expression="s/  tag: .*/  tag: \"${{ fromJSON(steps.release-info-file.outputs.releaseInfo).imageTag }}\"/" ./charts/account-pages/values.yaml
+          git add ./charts/account-pages/values.yaml
+          echo "::set-output name=releaseUrl::${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/releases/tag/${{ fromJSON(steps.release-info-file.outputs.releaseInfo).releaseName }}"
+
+      - name: Creating Pull Request
+        id: create-pr
+        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
+        uses: peter-evans/create-pull-request@v3
+        with:
+          draft: false
+          token: ${{ secrets.ZEBOT_GH_TOKEN }}
+          author: 'Zebot <zebot@users.noreply.github.com>'
+          branch: charts-update-account-pages-image-tag-${{ github.run_number }}
+          commit-message: 'chore: [charts] Update account-pages version'
+          title: 'Update account-pages version in Helm chart [skip ci]'
+          body: |
+            Image tag: `${{ fromJSON(steps.release-info-file.outputs.releaseInfo).imageTag }}`
+            Release: [`${{ fromJSON(steps.release-info-file.outputs.releaseInfo).releaseName }}`](${{ steps.change-helm-value.outputs.releaseUrl }})
+
+      - name: Printing Pull Request URL
+        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
+        shell: bash
+        run: |
+          echo "PR: ${{ steps.create-pr.outputs.pull-request-url }}"
+
+      - name: Delete release artifact
+        uses: geekyeggo/delete-artifact@v1
+        with:
+          failOnError: false
+          name: |
+            release-info.json
