--- a/.github/workflows/sync_translations.yml
+++ b/.github/workflows/sync_translations.yml
@@ -20,16 +20,14 @@ jobs:
           GITHUB_TOKEN: ${{github.token}}
           CROWDIN_PROJECT_ID: 342361
         with:
-          upload_sources: false
+          upload_sources: true
           upload_translations: false
           download_translations: true
-          skip_untranslated_files: true
-          # Download translations with pushing to branch
           push_translations: true
-          commit_message: 'chore: Update translations [skip ci]'
-          localization_branch_name: 'translations'
           create_pull_request: true
+          localization_branch_name: 'translations'
           pull_request_title: 'chore: Update translations'
+          commit_message: 'chore: Update translations'
           token: ${{secrets.WEBTEAM_CROWDIN_TOKEN}}
           source: '/src/i18n/en-US.json'
           translation: '/src/i18n/%locale%.json'
