--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
       timezone: 'Europe/Berlin'
   open-pull-requests-limit: 99
   labels:
-      - "type: chore \U0001F9F9"
+      - 'type: chore \U0001F9F9'
   ignore:
   - dependency-name: husky
     versions:
@@ -23,7 +23,7 @@ updates:
       timezone: 'Europe/Berlin'
   open-pull-requests-limit: 99
   labels:
-      - "type: chore \U0001F9F9"
+      - 'type: chore \U0001F9F9'
 - package-ecosystem: npm
   directory: '/server'
   schedule:
@@ -33,4 +33,4 @@ updates:
       timezone: 'Europe/Berlin'
   open-pull-requests-limit: 99
   labels:
-      - "type: chore \U0001F9F9"
+      - 'type: chore \U0001F9F9'
