--- a/server/.env.localhost
+++ b/server/.env.localhost
@@ -3,6 +3,6 @@
 NODE_DEBUG="@wireapp/*"
 PORT="8080"
 
-APP_BASE="http://localhost:8080"
+APP_BASE="http://local.zinfra.io:8080"
 BACKEND_REST="http://local.zinfra.io:8080/api"
 ENFORCE_HTTPS="false"
