feat: Add self hosted env variable

--- a/server/.env.localhost
+++ b/server/.env.localhost
@@ -6,3 +6,4 @@ PORT="8080"
 APP_BASE="http://local.zinfra.io:8080"
 BACKEND_REST="http://local.zinfra.io:8080/api"
 ENFORCE_HTTPS="false"
+IS_SELF_HOSTED="false"
