--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,3 +33,10 @@ updates:
     open-pull-requests-limit: 99
     labels:
       - 'type: chore 🧹'
+
+  # Github actions
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    open-pull-requests-limit: 99
+    schedule:
+      interval: 'daily'
