--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@emotion/react": "11.11.1",
     "@wireapp/api-client": "17.0.0",
     "@wireapp/commons": "4.4.10",
-    "@wireapp/react-ui-kit": "7.55.2",
+    "@wireapp/react-ui-kit": "9.8.0",
     "core-js": "3.31.0",
     "dotenv": "16.3.1",
     "dotenv-extended": "2.9.0",
@@ -11,30 +11,28 @@
     "i18next-browser-languagedetector": "6.1.4",
     "i18next-react-postprocessor": "3.1.0",
     "intersection-observer": "0.12.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-i18next": "11.18.6",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "13.1.2",
+    "react-router": "5.3.4",
+    "react-router-dom": "5.3.4",
     "url-search-params-polyfill": "8.2.3"
   },
   "devDependencies": {
-    "@babel/core": "7.22.5",
+    "@babel/core": "7.22.10",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.22.5",
+    "@babel/preset-env": "7.22.10",
     "@babel/preset-react": "7.22.5",
     "@babel/preset-typescript": "7.22.5",
     "@emotion/babel-preset-css-prop": "11.11.0",
-    "@hot-loader/react-dom": "16.14.0",
-    "@testing-library/react": "12.1.4",
+    "@testing-library/react": "14.0.0",
     "@types/cheerio": "0.22.31",
     "@types/color": "3.0.3",
-    "@types/enzyme": "3.10.12",
-    "@types/jest": "27.5.0",
+    "@types/jest": "27.5.2",
     "@types/node": "18.16.3",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
     "@types/react-router-dom": "5.3.3",
     "@types/webpack-env": "1.18.1",
     "@typescript-eslint/eslint-plugin": "2.34.0",
@@ -46,8 +44,6 @@
     "babel-loader": "8.2.5",
     "babel-plugin-remove-jsx-attributes": "0.0.2",
     "cross-env": "7.0.3",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.7",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-babel": "5.3.1",
@@ -69,13 +65,12 @@
     "os-browserify": "0.3.0",
     "path-browserify": "1.0.1",
     "prettier": "2.8.8",
-    "react-hot-loader": "4.13.1",
     "simple-git": "3.19.0",
     "sort-json": "2.0.1",
     "svg-inline-loader": "0.8.2",
     "terser-webpack-plugin": "5.3.9",
     "ts-jest": "26.5.6",
-    "typescript": "4.9.5",
+    "typescript": "5.1.6",
     "webpack": "5.87.0",
     "webpack-bundle-analyzer": "4.9.0",
     "webpack-cli": "4.10.0",
