--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
       "rules": {
         "@typescript-eslint/no-floating-promises": "off",
         "@typescript-eslint/typedef": "off",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "react/react-in-jsx-scope": "off"
       }
     }
   ],
