chore: Fix deployment to new linux env

--- a/server/.ebextensions/node-settings.config
+++ b/server/.ebextensions/node-settings.config
@@ -1,5 +1,3 @@
 option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    GzipCompression: true
-    NodeCommand: "npm run start:prod"
+  aws:elasticbeanstalk:environment:proxy:
     ProxyServer: nginx
