--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -20,6 +20,11 @@ jobs:
       AWS_APPLICATION_NAME: Account
       AWS_BUILD_ZIP_PATH: 'wire-account.zip'
 
+    outputs:
+      wire_builds_target_branches: ${{ steps.output_target_branches.outputs.wire_builds_target_branches }}
+      # chart_version: ${{ steps.publish_helm_chart.outputs.chart_version }}
+
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -53,6 +58,31 @@ jobs:
         if: contains(env.TITLE || env.COMMIT_MESSAGE, '[skip ci]') || contains(env.TITLE || env.COMMIT_MESSAGE, '[ci skip]')
         uses: andymckay/cancel-action@0.3
 
+      - name: Define target branches in wireapp/wire-builds to bump
+        id: output_target_branches
+        shell: bash
+        run: |
+          # NOTE: make sure that wire_builds_target_branches is valid JSON
+          wire_builds_target_branches='[]'
+
+          version_tag="${TAG:-$BRANCH_NAME}"
+
+          if [[ "$version_tag" == *"production"* ]]; then
+            echo "FUTUREWORK: bump some production branch on wire-builds once it exists"
+          fi
+
+          if [ "$version_tag" == "staging" ]; then
+            wire_builds_target_branches='["dev"]'
+          fi
+
+          if [ "$version_tag" == "WPB-6025-refactor" ]; then
+            wire_builds_target_branches='["dev"]'
+          fi
+
+          echo "wire_builds_target_branches: $wire_builds_target_branches"
+          echo "wire_builds_target_branches=$wire_builds_target_branches" >> $GITHUB_OUTPUT
+
+
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.12.0
         with:
@@ -85,27 +115,6 @@ jobs:
         if: env.TAG != ''
         run: yarn bundle:prod
 
-      - name: Assembling release information
-        if: env.TAG != '' && matrix.DISTRIBUTION == 'DISTRIBUTION_0'
-        # NOTE: always using 'main' config, since release version is only consumed at
-        #       'production' stage for now
-        # NOTE: 'containerImageTag' value must follow bin/push_docker.js:L49
-        shell: bash
-        env:
-          RELEASE_NAME: ${{env.TAG}}
-        run: |
-          configVersion=$(cat ./app-config/package.json | jq -r '.dependencies["wire-web-config-default-main"]' | awk -F '#' '{ print $2 }')
-          packageVersion=$(cat ./package.json | jq -r '.version')
-          containerImageTag="${packageVersion}-${configVersion}-${GITHUB_SHA::7}"
-          echo "{\"imageTag\": \"${containerImageTag}\", \"releaseName\": \"${RELEASE_NAME}\"}" > ./release-info.json
-
-      - name: Storing release information
-        if: env.TAG != '' && matrix.DISTRIBUTION == 'DISTRIBUTION_0'
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-info.json
-          path: ./release-info.json
-
       - name: Deploy staging build to Elastic Beanstalk
         if: env.BRANCH_NAME == 'staging' && matrix.DISTRIBUTION == 'DISTRIBUTION_0'
         uses: einaregilsson/beanstalk-deploy@v20
@@ -136,29 +145,23 @@ jobs:
           version_label: ${{env.TAG}}-${{github.run_id}}
           version_description: ${{github.sha}}
 
-      - name: Push staging Docker image
-        if: env.BRANCH_NAME == 'staging'
+      - name: Push Docker image
+        id: push_docker_image
         env:
           DOCKER_PASSWORD: ${{secrets.WEBTEAM_QUAY_PASSWORD}}
           DOCKER_USERNAME: ${{secrets.WEBTEAM_QUAY_USERNAME}}
         run: |
+          dist=$DISTRIBUTION
           if [ "$DISTRIBUTION" == "wire" ]; then
-            yarn docker '' staging
-          else
-            yarn docker "$DISTRIBUTION" staging
+            dist=""
           fi
-
-      - name: Push production Docker image
-        if: env.TAG != ''
-        env:
-          DOCKER_PASSWORD: ${{secrets.WEBTEAM_QUAY_PASSWORD}}
-          DOCKER_USERNAME: ${{secrets.WEBTEAM_QUAY_USERNAME}}
-        run: |
-          if [ "$DISTRIBUTION" == "wire" ]; then
-            yarn docker '' production
-          else
-            yarn docker "$DISTRIBUTION" production
+          stage="$BRANCH_NAME"
+          if [ "$TAG" != "" ]; then
+            stage="production"
           fi
+          yarn docker "$dist" "$stage" ${GITHUB_SHA} ./tag.txt
+          echo "image_tag=$(cat ./tag.txt)" >> $GITHUB_OUTPUT
+          echo "Pushed also unique docker tag $image_tag"
 
       - name: Create GitHub release
         id: create_release
@@ -172,72 +175,3 @@ jobs:
           body_path: ./CHANGELOG.md
           draft: false
           prerelease: false
-
-  update_helm_chart:
-    name: Update Helm chart
-    runs-on: ubuntu-latest
-
-    needs: test_build_deploy
-
-    steps:
-      # INFO: https://github.com/wireapp/wire-webapp/blob/062ae4e1c23fa0b33dafae9cc0acf9a94fa8ad1a/.github/workflows/test_build_deploy.yml#L351-L356
-      - name: Obtaining release information artifact
-        id: release-info-artifact
-        uses: actions/download-artifact@v3
-        continue-on-error: true
-        with:
-          name: release-info.json
-      - name: Indicating whether release info exist
-        id: release-info-file
-        env:
-          ARTIFACT_LOCAL_PATH: '${{ steps.release-info-artifact.outputs.download-path }}/release-info.json'
-        shell: bash
-        run: |
-          test -s "${ARTIFACT_LOCAL_PATH}" && echo '::set-output name=exists::true'
-          echo "::set-output name=releaseInfo::$(cat ${ARTIFACT_LOCAL_PATH})"
-
-      - name: Checking out 'wire-server'
-        uses: actions/checkout@v3
-        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
-        with:
-          repository: 'wireapp/wire-server'
-          fetch-depth: 1
-
-      - name: Changing Helm value of the account-pages chart
-        id: change-helm-value
-        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
-        shell: bash
-        run: |
-          sed --in-place --expression="s/  tag: .*/  tag: \"${{ fromJSON(steps.release-info-file.outputs.releaseInfo).imageTag }}\"/" ./charts/account-pages/values.yaml
-          git add ./charts/account-pages/values.yaml
-          echo "Upgrade account-pages version to ${{ fromJSON(steps.release-info-file.outputs.releaseInfo).imageTag }}" > ./changelog.d/0-release-notes/account-pages-upgrade
-          git add ./changelog.d/0-release-notes/account-pages-upgrade
-          echo "::set-output name=releaseUrl::${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/releases/tag/${{ fromJSON(steps.release-info-file.outputs.releaseInfo).releaseName }}"
-
-      - name: Creating Pull Request
-        id: create-pr
-        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
-        uses: peter-evans/create-pull-request@v5
-        with:
-          draft: false
-          token: ${{ secrets.ZEBOT_GH_TOKEN }}
-          author: 'Zebot <zebot@users.noreply.github.com>'
-          branch: charts-update-account-pages-image-tag-${{ github.run_number }}
-          commit-message: 'chore: [charts] Update account-pages version'
-          title: 'Update account-pages version in Helm chart [skip ci]'
-          body: |
-            Image tag: `${{ fromJSON(steps.release-info-file.outputs.releaseInfo).imageTag }}`
-            Release: [`${{ fromJSON(steps.release-info-file.outputs.releaseInfo).releaseName }}`](${{ steps.change-helm-value.outputs.releaseUrl }})
-
-      - name: Printing Pull Request URL
-        if: ${{ steps.release-info-file.outputs.exists == 'true' }}
-        shell: bash
-        run: |
-          echo "PR: ${{ steps.create-pr.outputs.pull-request-url }}"
-
-      - name: Delete release artifact
-        uses: geekyeggo/delete-artifact@v2
-        with:
-          failOnError: false
-          name: |
-            release-info.json
