--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -77,11 +77,11 @@ jobs:
         run: yarn test
 
       - name: Monitor coverage
-        if: github.event_name == 'pull_request' && matrix.DISTRIBUTION == 'DISTRIBUTION_0'
+        if: github.event_name == 'pull_request' && ! contains(github.event.pull_request.user.login, 'dependabot[bot]')
         uses: slavcodev/coverage-monitor-action@1.8.0
         with:
           github_token: ${{github.token}}
-          clover_file: 'coverage/clover.xml'
+          coverage_path: 'coverage/clover.xml'
           threshold_alert: ${{env.TEST_COVERAGE_FAIL_THRESHOLD}}
           threshold_warning: ${{env.TEST_COVERAGE_WARNING_THRESHOLD}}
 
