--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -23,6 +23,7 @@ jobs:
     outputs:
       wire_builds_target_branches: ${{ steps.output_target_branches.outputs.wire_builds_target_branches }}
       chart_version: ${{ steps.publish_helm_chart.outputs.chart_version }}
+      image_tag: ${{ steps.push_docker_image.outputs.image_tag }}
 
     steps:
       - name: Checkout
