--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/react-router-dom": "5.3.3",
     "@types/webpack-env": "1.18.1",
     "@typescript-eslint/eslint-plugin": "6.7.0",
-    "@typescript-eslint/parser": "2.34.0",
+    "@typescript-eslint/parser": "^6.19.1",
     "@wireapp/copy-config": "2.1.7",
     "@wireapp/eslint-config": "1.4.0",
     "adm-zip": "0.5.10",
@@ -48,7 +48,7 @@
     "cross-env": "7.0.3",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.7",
-    "eslint": "6.8.0",
+    "eslint": "8.5.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-import": "2.27.5",
@@ -68,7 +68,7 @@
     "lint-staged": "13.2.2",
     "os-browserify": "0.3.0",
     "path-browserify": "1.0.1",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0",
     "react-hot-loader": "4.13.1",
     "simple-git": "3.19.0",
     "sort-json": "2.0.1",
