--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,7 @@
     "outDir": "dist",
     "rootDirs": ["."],
     "sourceMap": true,
-    "target": "es6"
+    "target": "es6",
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
