--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -2,7 +2,7 @@ name: Test, Build & Deploy
 
 on:
   push:
-    branches: [staging, main]
+    branches: [staging, main, release/*]
     tags:
       - v*
 
@@ -75,7 +75,7 @@ jobs:
           fi
 
           if [ "$version_tag" == "release/q1-2024" ]; then
-          wire_builds_target_branches='["q1-2024"]'
+            wire_builds_target_branches='["q1-2024"]'
           fi
 
           echo "wire_builds_target_branches: $wire_builds_target_branches"
