--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -105,13 +105,13 @@ jobs:
           mkdir -p ./dist
           echo -e "$GITHUB_SHA" > "./dist/commit"
 
-      - name: Build staging
-        if: ${{env.BRANCH_NAME == 'staging'}}
-        run: yarn bundle:staging
-
-      - name: Build production
-        if: env.TAG != ''
-        run: yarn bundle:prod
+      - name: Build
+        run: |
+          if [ "$TAG" != "" ]; then
+            yarn bundle:prod
+          else
+            yarn bundle:staging
+          fi
 
       - name: Deploy staging build to Elastic Beanstalk
         if: env.BRANCH_NAME == 'staging' && matrix.DISTRIBUTION == 'DISTRIBUTION_0'
