chore: add certificates for local testing

--- a/server/.env.localhost
+++ b/server/.env.localhost
@@ -1,9 +1,9 @@
 # https://github.com/wireapp/wire-account/wiki/Self-hosting
 
 NODE_DEBUG="@wireapp/*"
-PORT="8080"
+PORT="8082"
 
-APP_BASE="http://local.zinfra.io:8080"
-BACKEND_REST="http://local.zinfra.io:8080/api"
+APP_BASE="https://local.zinfra.io:8082"
+BACKEND_REST="https://staging-nginz-https.zinfra.io"
 ENFORCE_HTTPS="false"
 IS_SELF_HOSTED="false"
