--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/enzyme": "3.10.12",
     "@types/jest": "27.5.0",
     "@types/node": "20.11.24",
+    "@types/platform": "^1.3.6",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-router-dom": "5.3.3",
