--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "@wireapp/api-client": "26.11.1",
     "@wireapp/commons": "5.2.7",
     "@wireapp/react-ui-kit": "9.16.0",
-    "babel-eslint": "^10.1.0",
     "core-js": "3.36.0",
     "dotenv": "16.4.5",
     "dotenv-extended": "2.9.0",
@@ -19,17 +18,17 @@
     "url-search-params-polyfill": "8.2.3"
   },
   "devDependencies": {
-    "@babel/core": "7.23.7",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/core": "7.24.0",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.22.5",
+    "@babel/preset-env": "7.24.0",
     "@babel/preset-react": "7.22.5",
-    "@babel/preset-typescript": "7.22.5",
+    "@babel/preset-typescript": "7.23.3",
     "@emotion/babel-preset-css-prop": "11.11.0",
     "@hot-loader/react-dom": "16.14.0",
     "@testing-library/react": "12.1.4",
-    "@types/cheerio": "0.22.31",
-    "@types/color": "3.0.3",
+    "@types/cheerio": "0.22.35",
+    "@types/color": "3.0.6",
     "@types/enzyme": "3.10.12",
     "@types/jest": "27.5.0",
     "@types/node": "20.11.24",
@@ -37,26 +36,27 @@
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-router-dom": "5.3.3",
-    "@types/webpack-env": "1.18.1",
-    "@typescript-eslint/eslint-plugin": "6.7.0",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@wireapp/copy-config": "2.1.7",
+    "@types/webpack-env": "1.18.4",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@wireapp/copy-config": "2.1.16",
     "@wireapp/eslint-config": "1.4.0",
     "adm-zip": "0.5.10",
+    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.5",
     "babel-plugin-remove-jsx-attributes": "0.0.2",
     "cross-env": "7.0.3",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.7",
-    "eslint": "8.5.0",
+    "enzyme-adapter-react-16": "1.15.8",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-babel": "5.3.1",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest": "27.6.3",
-    "eslint-plugin-jsdoc": "48.0.2",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jest": "27.9.0",
+    "eslint-plugin-jsdoc": "48.2.0",
     "eslint-plugin-no-unsanitized": "4.0.2",
-    "eslint-plugin-prettier": "5.0",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-prettier": "5.1",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
@@ -70,17 +70,17 @@
     "path-browserify": "1.0.1",
     "prettier": "3.2.4",
     "react-hot-loader": "4.13.1",
-    "simple-git": "3.19.0",
+    "simple-git": "3.22.0",
     "sort-json": "2.0.1",
     "svg-inline-loader": "0.8.2",
-    "terser-webpack-plugin": "5.3.9",
+    "terser-webpack-plugin": "5.3.10",
     "ts-jest": "26.5.6",
     "typescript": "4.9.5",
-    "webpack": "5.87.0",
-    "webpack-bundle-analyzer": "4.9.0",
+    "webpack": "5.90.3",
+    "webpack-bundle-analyzer": "4.10.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-middleware": "6.1.1",
-    "webpack-hot-middleware": "2.25.3"
+    "webpack-hot-middleware": "2.26.1"
   },
   "husky": {
     "hooks": {
