--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -108,12 +108,7 @@ jobs:
           echo -e "$GITHUB_SHA" > "./dist/commit"
 
       - name: Build
-        run: |
-          if [ "$TAG" != "staging" ]; then
-          yarn bundle:staging
-          else
-          yarn bundle:prod
-          fi
+        run: yarn bundle:prod
 
       - name: Deploy staging build to Elastic Beanstalk
         if: env.BRANCH_NAME == 'staging' && matrix.DISTRIBUTION == 'DISTRIBUTION_0'
