runfix: assign a user and group id to containers

--- a/charts/account-pages/values.yaml
+++ b/charts/account-pages/values.yaml
@@ -55,6 +55,7 @@ podSecurityContext:
   capabilities:
     drop:
       - ALL
-  runAsNonRoot: true
+  runAsUser: 1000
+  runAsGroup: 1000
   seccompProfile:
     type: RuntimeDefault
