fix(actions): prevent command injection
Unsanitized user input could be used to execute arbitrary code in the context of the workflow.
e.g.:
- specially crafted tags, e.g. `docker/v0.0.0;$(cat${IFS}/etc/passwd)#`,
- workflow inputs like `env`

related:
- https://wearezeta.atlassian.net/wiki/spaces/SC/pages/1216053328/How+to+avoid+Command+Injection+via+Github+Actions+or+CI+jobs+in+general
- https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#example-of-a-script-injection-attack

--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -173,10 +173,9 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.CHARTS_WEBAPP_AUTOMATION_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.CHARTS_WEBAPP_AUTOMATION_AWS_SECRET_ACCESS_KEY }}
+          DOCKER_IMAGE_TAG: ${{steps.push_docker_image.outputs.image_tag}}
         run: |
           set -eo pipefail
-
-          image_tag="${{steps.push_docker_image.outputs.image_tag}}"
 
           helm plugin install https://github.com/hypnoglow/helm-s3.git --version 0.15.1
 
@@ -189,7 +188,7 @@ jobs:
           fi
           echo "chart_version=$chart_version" >> $GITHUB_OUTPUT
 
-          chart_patched="$(yq -Mr ".version = \"$chart_version\" | .appVersion = \"$image_tag\"" ./charts/account-pages/Chart.yaml)"
+          chart_patched="$(yq -Mr ".version = \"$chart_version\" | .appVersion = \"${DOCKER_IMAGE_TAG}\"" ./charts/account-pages/Chart.yaml)"
           echo "$chart_patched" > ./charts/account-pages/Chart.yaml
 
           helm package ./charts/account-pages
@@ -229,6 +228,8 @@ jobs:
 
       - name: Create new build in wire-build
         shell: bash
+        env:
+          DOCKER_IMAGE_TAG: ${{needs.test_build_deploy.outputs.image_tag}}
         run: |
           set -eo pipefail
 
@@ -237,7 +238,6 @@ jobs:
           git config --global user.email "zebot@users.noreply.github.com"
           git config --global user.name "Zebot"
 
-          image_tag="${{needs.test_build_deploy.outputs.image_tag}}"
 
           for retry in $(seq 3); do
             set +e
@@ -256,7 +256,7 @@ jobs:
               ./bin/set-chart-fields account-pages \
               "version=$chart_version" \
               "repo=https://s3-eu-west-1.amazonaws.com/public.wire.com/charts-webapp" \
-              "meta.appVersion=$image_tag" \
+              "meta.appVersion=${DOCKER_IMAGE_TAG}" \
               "meta.commitURL=${{github.event.head_commit.url}}" \
               "meta.commit=${{github.event.head_commit.id}}" \
             | ./bin/bump-prerelease )
