--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,6 +14,7 @@
     "rootDirs": ["."],
     "sourceMap": true,
     "target": "es6",
+    "skipLibCheck": true,
   },
   "exclude": ["node_modules"],
 }
