--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "resource/*": ["resource/*"],
       "i18n/*": ["src/i18n/*"],
     },
+    "skipLibCheck": true,
   },
   "exclude": ["node_modules", "server"],
 }
