fix(actions): prevent workflow error when no target environment is available in wire-build - WPB-6801

--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -82,6 +82,9 @@ jobs:
               },
               "q1-2024": {
                 "targets": "[\"q1-2024\"]"
+              },
+              ".*": {
+                "targets": "[]"
               }
             }
           export_to: log,output
