--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-react-postprocessor": "3.1.0",
     "intersection-observer": "0.12.2",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "11.18.6",
@@ -30,13 +30,13 @@
     "@types/color": "3.0.6",
     "@types/jest": "27.5.0",
     "@types/node": "20.14.2",
-    "@types/platform": "^1.3.6",
+    "@types/platform": "1.3.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "5.3.3",
     "@types/webpack-env": "1.18.5",
     "@typescript-eslint/eslint-plugin": "7.12.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "@wireapp/copy-config": "2.2.2",
     "@wireapp/eslint-config": "1.4.0",
     "adm-zip": "0.5.14",
