--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -128,7 +128,7 @@ jobs:
           aws_access_key: ${{secrets.WEBTEAM_AWS_ACCESS_KEY_ID}}
           aws_secret_key: ${{secrets.WEBTEAM_AWS_SECRET_ACCESS_KEY}}
           application_name: ${{env.AWS_APPLICATION_NAME}}
-          environment_name: wire-account-staging-al2
+          environment_name: wire-account-staging
           region: eu-central-1
           deployment_package: ${{env.AWS_BUILD_ZIP_PATH}}
           wait_for_deployment: false
@@ -143,7 +143,7 @@ jobs:
           aws_access_key: ${{secrets.WEBTEAM_AWS_ACCESS_KEY_ID}}
           aws_secret_key: ${{secrets.WEBTEAM_AWS_SECRET_ACCESS_KEY}}
           application_name: ${{env.AWS_APPLICATION_NAME}}
-          environment_name: wire-account-prod-al2
+          environment_name: wire-account-prod
           region: eu-central-1
           deployment_package: ${{env.AWS_BUILD_ZIP_PATH}}
           wait_for_deployment: false
